@@ -627,7 +627,7 @@ AB
 </theorem>
 
 <sageadvice acro="NME4" index="nonsingular matrices!round 4">
-<title>Nonsingular Matrices, Round 4</title>
+<title>Nonsingular Matrix Equivalences, Round 4</title>
 <acroref type="archetype" acro="A" /> and <acroref type="archetype" acro="B" /> have square coefficient matrices that illustrate the dichotomy of singular and nonsingular matrices.  Here we illustrate the latest addition to our series of equivalences, <acroref type="theorem" acro="CSNM" />.
 <sage>
 <input>A = matrix(QQ, [[1, -1, 2],
