@@ -497,7 +497,7 @@ B=
 </theorem>
 
 <sageadvice acro="NME2" index="nonsingular matrices, round 2">
-<title>Nonsingular Matrices, Round 2</title>
+<title>Nonsingular Matrix Equivalences, Round 2</title>
 As will be our habit, we can illustrate properties of nonsingular matrices with random square matrices.  Review <acroref type="sage" acro="NME1" /> for a refresher on generating these matrices.  Here we will illustrate the fifth condition, half of <acroref type="theorem" acro="NMLIC" />.
 <sage>
 <input>n = 6
