@@ -614,7 +614,7 @@ Then
 <p>It is amazing that matrix multiplication and the determinant interact this way.  Might it also be true that $\detname{A+B}=\detname{A}+\detname{B}$?  (<acroref type="exercise" acro="PDM.M30" />)</p>
 
 <sageadvice acro="NME7" index="nonsingular matrices!round 7">
-<title>Nonsingular Matrices, Round 7</title>
+<title>Nonsingular Matrix Equivalences, Round 7</title>
 Our latest addition to the NME series is sometimes considered the best computational way to determine if a matrix is nonsingular.  While computing a single number for a comparison to zero is a very appealing process, other properties of nonsingular matrices are faster for determining if a matrix is nonsingular.  Still, it is a worthwhile equivalence.  We illustrate both directions.
 <sage>
 <input>A = matrix(QQ, [[ 1,  0,  2,  1,  1, -3,  4, -6],
