@@ -141,7 +141,7 @@ a_{k-1}\left(\lambda_{k-1}-\lambda_k\right)\vect{x}_{k-1}
 </theorem>
 
 <sageadvice acro="NME8" index="nonsingular matrices!round 8">
-<title>Nonsingular Matrices, Round 8</title>
+<title>Nonsingular Matrix Equivalences, Round 8</title>
 Zero eigenvalues are another marker of singular matrices.  We illustrate with two matrices, the first nonsingular, the second not.
 <sage>
 <input>A = matrix(QQ, [[ 1,  0,  2,  1,  1, -3,  4, -6],
