@@ -1,6 +1,7 @@
 v3.xx 2015/xx/xx
 ~~~~~~~~~~~~~~~~
 New: Exercise SSLE.C53, a 2x2 system from The Economist
+Edit: consistent titles on Sage nonsingular matrix series (Daniel Yoork)
 Typo: Example NSS, sentence needs "which" to join clauses (Chili Johnson)
 Typo: Example LLDS, set is R, not B (Daniel York)
 
